--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # dati MySQL / DB locali
 infra/db/data/
 
-apps/backend/dist/tsconfig.build.tsbuildinfoinfra/db/data/
+apps/backend/dist/tsconfig.build.tsbuildinfo
